<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/inbox"
        android:title="@string/Drawer" />

    <item
        android:id="@+id/navigation_game"
        android:icon="@drawable/outfit"
        android:title="@string/Costume" />

    <item
        android:id="@+id/navigation_rank"
        android:icon="@drawable/costume"
        android:title="@string/Combin" />

    <item
        android:id="@+id/navigation_send_question"
        android:icon="@drawable/lifestyle"
        android:title="@string/Activity" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_icons8_settings"
        android:title="@string/Settings" />

</menu>